--- a/flex.css
+++ b/flex.css
@@ -1,11 +1,11 @@
 body {
-  font-family: "Mycustomfont";
+  font-family: "Mycustomfont", Source Sans Pro;
   overflow-x: hidden;
 }
 
 @font-face {
   font-family: "Mycustomfont";
-  src: url("SourceSans3-Regular.ttf");
+  src: url("/flex/SourceSans3-Regular.ttf");
 }
 *,
 *::after,
